# Rust_learn

./: .gitignore  Cargo.toml  README.md
concepts/: Cargo.toml
concepts/01_heap_stack/: Cargo.toml
concepts/01_heap_stack/src/: main.rs  mem_align.rs  pointer.rs  string.rs
concepts/02_pointer/src/: crash.c  main.rs
concepts/03_grammer/: Cargo.toml
concepts/03_grammer/src/: main.rs
concepts/04_lifetime/: Cargo.toml
concepts/04_lifetime/src/: main.rs
concepts/05_raii_type/: Cargo.toml  readme.md
concepts/05_raii_type/src/: fake_trait_obj.rs  generic.rs  hashmap.rs  linked_list.rs  main.rs  raii.rs  trait_obj.rs
concepts/05_raii_type_trait/: Cargo.toml
concepts/05_raii_type_trait/src/: dst.rs  ext_trait.rs  generic_tcp.rs  main.rs  trait_obj.rs
concepts/06_ownership/src/: borrow.rs  check_copy.rs  main.rs  multi_owner.rs  vec_owner.rs
concepts/07_smart_pt/: Cargo.toml  readme.md
concepts/07_smart_pt/src/: cell.rs  cow.rs  cow_serde.rs  deref.rs  main.rs
concepts/08_concurrency/: README.md
concepts/08_concurrency/src/: channel.rs  main.rs  mutex_sync.rs  send_sync.rs
concepts/09_iter/src/: iter_ext.rs  main.rs  myiter.rs
concepts/10_closure/src/: closure.rs  closure_trait.rs  main.rs
concepts/11_generic_trait/: Cargo.toml
concepts/11_generic_trait/benches/: trait_objet_bench.rs
concepts/11_generic_trait/src/: associated_types.rs  (+7 more)
concepts/11_trait/: Cargo.toml
concepts/12_future/: Cargo.toml  README.md
concepts/12_future_pin/: README.md
tiny-kv-server/: Cargo.toml  README.md  abi.proto
tiny-kv-server/src/: error.rs  lib.rs
(+62 files in other folders)
