[workspace]

members = [
    "01_heap_stack",
    "02_pointer",
    "03_grammer",
    "04_lifetime",
    "05_raii_type_trait",
    "06_ownership",
    "07_smart_pt",
    "08_concurrency",
    "09_iter",
    "10_closure",
    "11_generic_trait",
    "12_future",
]

[workspace.dependencies]
tokio = { version = "1.35.0", features = ["sync"] }
