[package]
name = "generic_trait_11"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_impl = "1.3.0"
criterion = "0.3"
either = { version = "1.15.0", default-features = false }

[[bench]]
name = "trait_objet_bench"
harness = false
